tests/test_files/default/neg/bad_flow2.s
	mov r1 pc
	restrict r1 (O, GLOBAL)
	seal r1 r0 r1
	halt
